Rewrite settings and run_save

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ regex = "~1"
 open = "~3"
 chrono = "~0"
 rpassword = "~6"
+uuid = { version = "~1", features = ["v4", "fast-rng"] }
 clap = { version = "~3", features = ["derive"] }
 serde = { version = "~1", features = ["derive"] }
 serde_yaml = "~0"
